// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Edit view matches snapshot 1`] = `
<div
  className="sc-gsTEea llcTof"
>
  <form
    onSubmit={[Function]}
  >
    <div>
      <mock-JSONEditor
        name="config"
        onBlur={[Function]}
        onChange={[Function]}
        readOnly={false}
        value="{
	\\"connector.class\\": \\"FileStreamSource\\",
	\\"tasks.max\\": \\"10\\",
	\\"topic\\": \\"test-topic\\",
	\\"file\\": \\"/some/file\\"
}"
      />
    </div>
    <div />
    <button
      className="sc-bdfBQB gfDMZr"
      disabled={true}
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Edit view matches snapshot when config has credentials 1`] = `
<div
  className="sc-gsTEea llcTof"
>
  <div
    className="sc-dlfnuX bCtGov"
  >
    Please replace ****** with the real credential values to avoid accidentally breaking your connector config!
  </div>
  <form
    onSubmit={[Function]}
  >
    <div>
      <mock-JSONEditor
        name="config"
        onBlur={[Function]}
        onChange={[Function]}
        readOnly={false}
        value="{
	\\"connector.class\\": \\"FileStreamSource\\",
	\\"tasks.max\\": \\"10\\",
	\\"topic\\": \\"test-topic\\",
	\\"file\\": \\"/some/file\\",
	\\"password\\": \\"******\\"
}"
      />
    </div>
    <div />
    <button
      className="sc-bdfBQB gfDMZr"
      disabled={true}
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Edit view matches snapshot when fetching config 1`] = `<mock-PageLoader />`;
